test/syc/good/initstruct.c
/*
 * Structure initialization
 */

struct s {
	int x;
	int y;
};

struct s a = { 1, 2 };
