test/syc/bad/structredef.c
/*
 * Redefinition of 'struct foo'
 */

struct foo {
	int x;
	int y;
} f;

struct foo {
	int x;
	int y;
} g;
